--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Books">Books</a>
                         </li>
+                        <li class="nav-item">
+    <a class="nav-link text-dark" asp-page="/Loans">Loans</a>
+</li>
+
                     </ul>
                 </div>
             </div>
