--- a/Pages/Books.cshtml
+++ b/Pages/Books.cshtml
@@ -3,10 +3,10 @@
 
 <h1>All Books</h1>
 
-<!-- 🔍 Search Form -->
+<!-- 🔍 Search + Sort Form -->
 <form method="get" class="mb-3">
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-4">
             <input type="text" name="search" value="@Model.SearchTerm" class="form-control" placeholder="Search..." />
         </div>
         <div class="col-md-3">
@@ -16,8 +16,16 @@
                 <option value="genre">Genre</option>
             </select>
         </div>
+        <div class="col-md-3">
+            <select name="sort" class="form-select">
+                <option value="">Sort by...</option>
+                <option value="title">Title</option>
+                <option value="year">Year</option>
+                <option value="author">Author</option>
+            </select>
+        </div>
         <div class="col-md-2">
-            <button type="submit" class="btn btn-primary">Search</button>
+            <button type="submit" class="btn btn-primary w-100">Apply</button>
         </div>
     </div>
 </form>
